fix:public play method fixed and tested and ncts changed to mcts
